--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
+    <script src="//at.alicdn.com/t/c/font_3662070_n09zliqa6p.js"></script>
   </body>
 </html>
